# ringoro

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci.yml
docker/js/: Dockerfile
docker/nginx/: nginx.conf
docker/rust/: Dockerfile
js/: Dockerfile  package.json
js/api/: bsconfig.json  jest.config.js  package.json
js/api/__tests__/: api_test.re  mongo_util.js
js/api/src/: ringoroApi.ml  ringoroApi_Core.ml  ringoroApi_Core.mli  ringoroApi_Types.ml
js/frontend/: bsconfig.json  next.config.js  package.json
js/frontend/__tests__/: fileHooks_test.re  fileutil.js
js/frontend/components/: Layout.re
js/frontend/libs/: fileHooks.ml  pictureUpload.ml  resource.ml  resource.yaml
js/libs/: base64.js  fileHooks.mli
js/pages/: index.re
rust/: .gitignore  Cargo.toml  Dockerfile
rust/fcomps/: Cargo.toml
rust/fcomps/src/: lib.rs  macros.rs
rust/fcomps/src/behavior/: base.rs  composit.rs  effect.rs  lift.rs  mod.rs
rust/fcomps/src/core/: base.rs  composit.rs  convert.rs  mod.rs  validate.rs
rust/fcomps/src/service/: crud.rs  mod.rs  servicebase.rs
rust/graphql/: Cargo.toml
rust/graphql/src/: lib.rs
rust/mongo/: Cargo.toml
rust/mongo/src/: context.rs  lib.rs  service.rs  test.rs  test_util.rs  withid.rs
rust/utils/: Cargo.toml
rust/utils/src/: config.rs  lib.rs  result.rs
rust/web/: Cargo.toml
rust/web/src/: app_data.rs  app_error.rs  auth.rs  context.rs  controller.rs  graphql_bind.rs  image.rs  lib.rs  main.rs  mongo.rs  result.rs  schema.rs  server.rs  test_util.rs
rust/web/src/fcomps/: core.rs  macros.rs  mod.rs  sync.rs
rust/web/src/schema/: mod.rs
rust/web/src/services/: auth_hook.rs  mod.rs  tempimg.rs  user.rs
rust/web/src/stores/: mod.rs  rawimage.rs  tempimg.rs  user.rs
test/: Dockerfile  Gemfile  Guardfile  Rakefile
test/api/: graphql_test.rb  test_helper.rb
web/: Cargo.toml  Dockerfile
web/src/: main.rs
