[package]
name = "ringoro-mongo"
version = "0.1.0"
authors = ["tman <satominprpr@gmail.com>"]
edition = "2018"

[dependencies]
ringoro-utils = { path = "../utils" }
ringoro-fcomps = { path = "../fcomps" }
async-trait = "0.1"
mongodb = "1.1"
mongodm = "0.4"
serde = "1.0"
tokio = { version = "0.2", features = ["full"] }
validator = "0.11"
futures = "0.3"

[dev-dependencies]
once_cell = "1.5"
pretty_assertions = "0.6"
