[package]
name = "ringoro-web"
version = "0.1.0"
authors = ["tman <satominprpr@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
env_logger = "0.7.1"
envy = "0.4.1"
err-derive = "0.3"
juniper = "0.14.2"
mongodb = "1.1.1"
mongodm = "0.4.3"
once_cell = "1.5.2"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"

[dev-dependencies]
async_once = "0.2.1"
pretty_assertions = "0.6.1"
difference = "2.0.0"
