[package]
name = "ringoro-web"
version = "0.1.0"
authors = ["tman <satominprpr@gmail.com>"]
edition = "2018"

[dependencies]
ringoro-utils = { path = "../utils" }
ringoro-mongo = { path = "../mongo" }
ringoro-fcomps = { path = "../fcomps" }
ringoro-graphql = { path = "../graphql" }
actix-web = "3"
actix-cors = "0.4"
async-trait = "0.1"
base64 = "0.13"
bson =  "1.0"
env_logger = "0.7.1"
image = "0.23"
juniper = "0.15"
mongodb = "1.1"
mongodm = "0.4"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
svgtypes = "0.5"
xmltree = "0.10"

[dev-dependencies]
async_once = "0.2"
pretty_assertions = "0.6"
